# bevy_test

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/plugins/: key_mgr.rs  player_plugin.rs  world_setup.rs
src/plugins/player_plugin/: componets.rs  mod.rs  system.rs
