cargo-features = ["codegen-backend"]

[package]
name = "bevy_test"
version = "0.1.0"
edition = "2024"

[dependencies]
# ダイナミックリンクリリースでは消さなければならない
bevy = { version = "0.17.2", features = ["dynamic_linking"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.release]
codegen-backend = "llvm"

