cargo-features = ["codegen-backend"]

[package]
name = "bevy_test"
version = "0.1.0"
edition = "2024"

[dependencies]
# ダイナミックリンクリリースでは消さなければならない
bevy = { version = "0.17.2", features = ["dynamic_linking"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"

[profile.release]
codegen-backend = "llvm"

# --- クロスコンパイル設定 ---
# WSLから Windows (MSVC) 向けにビルドする場合の設定
[target.x86_64-pc-windows-msvc]
linker = "rust-lld" # 高速なリンカを使用

